--- a/frontend/aila.html
+++ b/frontend/aila.html
@@ -394,7 +394,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>Legal Document Change Analyzer</h1>
+            <h1>Aila - Your AI Legal Assistant</h1>
             <p>AI-powered legal document comparison and analysis</p>
             <div class="config-info" id="configInfo">
                 API Endpoint: <span id="apiEndpoint">Loading...</span>
