Demo in h1 added

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="header">
-            <h1>Aila - Your AI Legal Assistant</h1>
+            <h1>Aila - Your AI Legal Assistant (Demo)</h1>
             <p>AI-powered legal document comparison and analysis</p>
             <div class="config-info" id="configInfo">
                 API Endpoint: <span id="apiEndpoint">Loading...</span>
