switched to AnalyzeFn being a Protocol

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -118,14 +118,14 @@
                 <form id="textAnalysisForm">
                     <div class="form-group">
                         <label for="doc1Text">First Document Text</label>
-                        <textarea id="doc1Text" name="doc1_text" placeholder="Paste your first document text here..."
-                            required></textarea>
+                        <textarea id="doc1Text" name="doc1_text" placeholder="Paste"
+                            required>This is the original contract. The payment terms are 30 days. Company A needs to pay 1€ to company B.</textarea>
                     </div>
 
                     <div class="form-group">
                         <label for="doc2Text">Second Document Text</label>
                         <textarea id="doc2Text" name="doc2_text" placeholder="Paste your second document text here..."
-                            required></textarea>
+                            required>This is the updated contract. The payment terms are 1 day. Company A needs to pay 1000000€ to company B.</textarea>
                     </div>
 
                     <div class="form-row">
