--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -139,6 +139,36 @@
         </div>
 
         <div class="sections">
+            <!-- LLM Settings Panel -->
+            <div class="section llm-settings">
+                <h2 class="section-title">⚙️ LLM Configuration</h2>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="llmProvider">LLM Provider</label>
+                        <select id="llmProvider" name="provider" required>
+                            <option value="anthropic">Anthropic</option>
+                            <option value="openai">OpenAI</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="llmModel">Model</label>
+                        <input type="text" id="llmModel" name="model" value="claude-3-5-haiku-20241022" required>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="llmTemperature">Temperature</label>
+                        <input type="number" id="llmTemperature" name="temperature" min="0" max="2" step="0.1"
+                            value="0.1" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="llmPromptTemplate">Prompt Template</label>
+                        <input type="text" id="llmPromptTemplate" name="prompt_template" value="prompt_2.txt"
+                            required>
+                    </div>
+                </div>
+            </div>
             <!-- File Upload Section -->
             <div class="section">
                 <h2 class="section-title">📄 Upload Documents for Analysis</h2>
@@ -151,33 +181,6 @@
                         <div class="form-group">
                             <label for="document2">Second Document</label>
                             <input type="file" id="document2" name="document2" accept=".txt,.pdf,.docx" required>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="fileProvider">LLM Provider</label>
-                            <select id="fileProvider" name="provider" required>
-                                <option value="anthropic">Anthropic</option>
-                                <option value="openai">OpenAI</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="fileModel">Model</label>
-                            <input type="text" id="fileModel" name="model" value="claude-3-5-haiku-20241022" required>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="fileTemperature">Temperature</label>
-                            <input type="number" id="fileTemperature" name="temperature" min="0" max="2" step="0.1"
-                                value="0.1" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="filePromptTemplate">Prompt Template</label>
-                            <input type="text" id="filePromptTemplate" name="prompt_template" value="prompt_2.txt"
-                                required>
                         </div>
                     </div>
 
@@ -211,33 +214,6 @@
                         <div class="form-group">
                             <label for="doc2Name">Second Document Name</label>
                             <input type="text" id="doc2Name" name="name_doc2" value="document2.txt" required>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="textProvider">LLM Provider</label>
-                            <select id="textProvider" name="provider" required>
-                                <option value="anthropic">Anthropic</option>
-                                <option value="openai">OpenAI</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="textModel">Model</label>
-                            <input type="text" id="textModel" name="model" value="claude-3-5-haiku-20241022" required>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="textTemperature">Temperature</label>
-                            <input type="number" id="textTemperature" name="temperature" min="0" max="2" step="0.1"
-                                value="0.1" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="textPromptTemplate">Prompt Template</label>
-                            <input type="text" id="textPromptTemplate" name="prompt_template" value="prompt_2.txt"
-                                required>
                         </div>
                     </div>
 
