added timeout env variable, also needs to be set on railways to prevent timeout when calling e.g. open ai models with larger pdf document. Secondly, in the frontend only models are shown that fit the provider.

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -197,7 +197,9 @@
                     </div>
                     <div class="form-group">
                         <label for="llmModel">Model</label>
-                        <input type="text" id="llmModel" name="model" value="claude-3-5-haiku-20241022" required>
+                        <select id="llmModel" name="model" required>
+                            <option value="" disabled selected>Loading models...</option>
+                        </select>
                     </div>
                 </div>
 
