--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -161,7 +161,7 @@
                 
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="userApiKeyProvider">API Key Provider</label>
+                        <label for="userApiKeyProvider">LLM provider</label>
                         <select id="userApiKeyProvider" name="userApiKeyProvider" required>
                             <option value="openai">OpenAI</option>
                             <option value="anthropic">Anthropic</option>
@@ -179,30 +179,15 @@
                 <h2 class="section-title">⚙️ LLM Configuration</h2>
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="llmProvider">LLM Provider</label>
-                        <select id="llmProvider" name="provider" required>
-                            <option value="anthropic">Anthropic</option>
-                            <option value="openai">OpenAI</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
                         <label for="llmModel">Model</label>
                         <select id="llmModel" name="model" required>
                             <option value="" disabled selected>Loading models...</option>
                         </select>
                     </div>
-                </div>
-
-                <div class="form-row">
                     <div class="form-group">
                         <label for="llmTemperature">Temperature</label>
                         <input type="number" id="llmTemperature" name="temperature" min="0" max="2" step="0.1"
                             value="0.1" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="llmPromptTemplate">Prompt Template</label>
-                        <input type="text" id="llmPromptTemplate" name="prompt_template" value="prompt_2.txt"
-                            required>
                     </div>
                 </div>
             </div>
